# live-threat-detector

./: .gitignore  README.md  pyproject.toml
docs/: benchmarks.md  data.md
docs/superpowers/plans/: 2026-07-23-training-and-ucf-benchmark.md
docs/superpowers/specs/: 2026-07-23-video-threat-detector-design.md
scripts/: download_data.py
src/threat_detector/: __init__.py  cli.py
src/threat_detector/action/: x3d_branch.py
src/threat_detector/bench/: modal_app.py  train_helpers.py
src/threat_detector/calib/: alarm_budget.py
src/threat_detector/core/: events.py  frames.py  motion.py  pipeline.py  sinks.py
src/threat_detector/data/: clip_sampler.py  ingest.py  manifest.py  yolo_dataset.py
src/threat_detector/detection/: yolo_branch.py
src/threat_detector/eval/: metrics.py  report.py  scorer.py
src/threat_detector/fusion/: bayes_fuser.py  hysteresis.py  loiter_baseline.py
src/threat_detector/serve/: dashboard.py
tests/: test_calib_and_metrics.py  test_clip_sampler.py  test_download_data.py  test_fusion.py  test_hysteresis.py  test_ingest.py  test_manifest.py  test_motion_and_loiter.py  test_pipeline.py  test_report.py  test_scorer.py  test_train_x3d_config.py  test_yolo_dataset.py
